# BxScript

./: CMakeLists.txt  LICENSE  main.cpp  readme.md
common/: ColorKit.h  FontKit.h  JsonKit.h  KeyWord.h  ModuleHelper.h  StringKit.h  Symbols.h  TextureKit.h  TimeKit.h  TokenKind.h  TokenType.h
docs/: README.md  _sidebar.md  builtins.md  guide.md  index.html  stdlib.md
evaluator/: Environment.h  EventLoop.h  Interpreter.cpp  Interpreter.h  Logger.h  Value.cpp  Value.h
evaluator/values/: ArrayValue.cpp  BooleanValue.cpp  BufferValue.cpp  FunctionValue.cpp  NullValue.cpp  NumberValue.cpp  ObjectValue.cpp  StringValue.cpp
gui/: GuiRenderer.h  GuiRuntime.cpp  GuiRuntime.h
lexer/: Lexer.cpp  Lexer.h  Token.h
libs/glfw-src/header/: nuklear.h
libs/md5/: md5.cpp  md5.h
libs/sha256/: sha256.cpp  sha256.h
parser/: Expression.h  Parser.cpp  Parser.h  ParserVM.h
stdlib/: CryptModule.h  DateModule.h  GuiModule.h  IOModule.h  JsonModule.h  MathModule.h  NetModule.h  OsModule.h  RegexModule.h  ThreadModule.h
tests/: test_interpreter.cpp  test_parser.cpp
